--- a/samconfig.toml
+++ b/samconfig.toml
@@ -8,17 +8,21 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"default\""
 image_repositories = []
-confirm_changeset = true
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-wzillityuqed"
+
 
 [staging]
 [staging.deploy]
 [staging.deploy.parameters]
-stack_name = "todo-list-aws-staging"
+stack_name = "todo-list-aws"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
 image_repositories = []
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-wzillityuqed"
+confirm_changeset = true
+
 
 [production]
 [production.deploy]
