--- a/samconfig.toml
+++ b/samconfig.toml
@@ -27,9 +27,10 @@ confirm_changeset = true
 [production]
 [production.deploy]
 [production.deploy.parameters]
-stack_name = "todo-list-aws-production"
+stack_name = "todo-list-aws"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
 image_repositories = []
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-wzillityuqed"
