--- a/samconfig.toml
+++ b/samconfig.toml
@@ -15,21 +15,22 @@ disable_rollback = true
 [staging]
 [staging.deploy]
 [staging.deploy.parameters]
-stack_name = "todo-list-aws"
-s3_prefix = "todo-list-aws"
+stack_name = "todo-list-aws-staging"
+s3_prefix = "todo-list-aws-staging"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
 image_repositories = []
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-wzillityuqed"
 confirm_changeset = true
+disable_rollback = true
 
 
 [production]
 [production.deploy]
 [production.deploy.parameters]
-stack_name = "todo-list-aws"
-s3_prefix = "todo-list-aws"
+stack_name = "todo-list-aws-production"
+s3_prefix = "todo-list-aws-production"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
